--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,27 @@ matrix:
       - cd php
       script:
       - phpunit --bootstrap src/autoload.php --debug --coverage-text test
+      
+  services:
+  - mysql
+  addons:
+     apt:
+    sources:
+      - mysql-5.7-trusty
+    packages:
+      - mysql-server
+      - mysql-client
+  test:
+  adapter: mysql2
+  database: risk
+  username: 1234567
+  password:password
+  encoding: utf8
+  before_install:
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS risk;'
+  - sudo mysql -e "use mysql; update user set authentication_string=PASSWORD('new_password') where User='1234567'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;"
+  - sudo mysql_upgrade
+  - sudo service mysql restart
 notifications:
   email:
     - 1272371@students.wits.ac.za
