--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,21 @@
 .vscode/
 *._*
 *_*
+
+api/*._*
+css/*._*
+extra/*._*
+img/*._*
+java/*._*
+js/*._*
+php/*._*
+test/*._*
+
+api/*_*
+css/*_*
+extra/*_*
+img/*_*
+java/*_*
+js/*_*
+php/*_*
+test/*_*
