--- a/.travis.yml
+++ b/.travis.yml
@@ -4,36 +4,16 @@ deploy:
   quiet: true
 matrix:
   include:
-  #java
-    - language:java
-    sudo: false # faster builds
-    jdk:
-    - oraclejdk8
-    - oraclejdk10
-    - oraclejdk-ea
-    - openjdk10
-    - openjdk11
-    script:
-    - make test
-    before_install:
-    - cd java
-    
-    #javascript
-    -language: node_js
-    node_js:
-     - "iojs"
-     - "7"
-     
-     #php
-    -language: php
-      php:
-      - 5.4
-      - 5.5
-      before_install:
-      - cd php
-      script:
-      - phpunit --bootstrap src/autoload.php --debug --coverage-text test
-      
+  -language: php
+    php:
+       - '5.4'
+       - '5.6'
+       - '7.0'
+  - hhvm # on Trusty only
+  - nightly
+  
+  
+  
   services:
   - mysql
   addons:
