--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
   "require": {
     "php" : "^5.6 || ^7.2 || ^7.0",
-    "ext-mbstring": "*"
+    "ext-mbstring": "*",
+    "ext-mysqli":"*",
+    "ext-pdo":"*",
+    "ext-json":"*"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.5"
