--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,13 @@
 language: php
-
 php:
   - '5.6'
   - '7.2'
-
 before_install:
   - travis_retry composer self-update
-
 before_script:
-  - composer install
-
+  - composer install --prefer-source --no-interaction
 script:
   - phpunit --configuration phpunit.xml --coverage-text
   - phpunit --coverage-clover coverage.xml
-
 after_success:
   - bash <(curl -s https://codecov.io/bash)
