--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ php:
   - '7.2'
 before_install:
   - travis_retry composer self-update
+before_script:
+  - curl -sS https://getcomposer.org/installer | php
 script:
   - phpunit --configuration phpunit.xml --coverage-text
   - phpunit --coverage-clover coverage.xml
