--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ php:
 before_install:
   - travis_retry composer self-update
 before_script:
-  - curl -sS https://getcomposer.org/installer | php
-  - composer install phpunit/phpunit
-  - composer update
+  #- curl -sS https://getcomposer.org/installer | php
+  - composer install
 script:
   - phpunit --configuration phpunit.xml --coverage-text
   - phpunit --coverage-clover coverage.xml
