--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
             "php/DataBase"
         ]
     },
-    "require": {
-        "phpunit/phpunit": "^7"
+    "require-dev": {
+        "phpunit/phpunit": "^7.3.4"
     }
 }
