--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 before_script:
   - curl -sS https://getcomposer.org/installer | php
 script:
-  - phpunit --configuration phpunit.xml --coverage-text
-  - phpunit --coverage-clover coverage.xml
+  - vendor/bin/phpunit --configuration phpunit.xml --coverage-text
+  - vendor/bin/phpunit --coverage-clover coverage.xml
 after_success:
   - bash <(curl -s https://codecov.io/bash)
