--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ before_install:
   - travis_retry composer self-update
 before_script:
   - curl -sS https://getcomposer.org/installer | php
+  - composer update
 script:
-  - vendor/bin/phpunit --configuration phpunit.xml --coverage-text
-  - vendor/bin/phpunit --coverage-clover coverage.xml
+  - phpunit --configuration phpunit.xml --coverage-text
+  - phpunit --coverage-clover coverage.xml
 after_success:
   - bash <(curl -s https://codecov.io/bash)
