--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_install:
   - travis_retry composer self-update
 before_script:
   - curl -sS https://getcomposer.org/installer | php
+  - composer install
   - composer update
 script:
   - phpunit --configuration phpunit.xml --coverage-text
