--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
 before_install:
   - travis_retry composer self-update
 before_script:
-  - curl -sS https://getcomposer.org/installer | php
+  - php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
   - composer update
 script:
   - phpunit --configuration=phpunit.xml --coverage-text
