--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
 before_install:
   - travis_retry composer self-update
 before_script:
-  - composer update
+  - composer require --dev phpunit/phpunit ^7.3.4
 script:
   - phpunit --configuration=phpunit.xml --coverage-text
   - phpunit --coverage-clover=coverage.xml
