--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 before_script:
   - wget -O phpunit https://phar.phpunit.de/phpunit-7.phar
 script:
-  - phpunit --configuration=phpunit.xml --coverage-text
-  - phpunit --coverage-clover=coverage.xml
+  - phpunit --configuration phpunit.xml --coverage-text
+  - phpunit --coverage-clover coverage.xml
 after_success:
   - bash <(curl -s https://codecov.io/bash)
