--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - travis_retry composer self-update
 before_script:
   - wget -O phpunit https://phar.phpunit.de/phpunit-7.phar
-  - ls
+  - phpunit --version
 script:
   - phpunit --configuration phpunit.xml --coverage-text
   - phpunit --coverage-clover coverage.xml
