--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,8 @@ php:
   - '7.1'
 before_install:
   - travis_retry composer self-update
-before_script:
-  - composer update
 script:
-  - phpunit --configuration=phpunit.xml --coverage-text
-  - phpunit --coverage-clover=coverage.xml
+  - phpunit --configuration phpunit.xml --coverage-text
+  - phpunit --coverage-clover coverage.xml
 after_success:
   - bash <(curl -s https://codecov.io/bash)
