--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,4 @@ jobs:
         
       # run tests!
       - run: phpunit
-        test:
-          post:
-            - bash <(curl -s https://codecov.io/bash)
+      - run: bash <(curl -s https://codecov.io/bash)
