--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
 before_install:
   - travis_retry composer self-update
 script:
-  - phpunit --configuration phpunit.xml --coverage-text
-  - phpunit --coverage-clover coverage.xml
+  - phpunit --configuration phpunit.xml
+  - phpunit
 after_success:
   - bash <(curl -s https://codecov.io/bash)
