--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
           - v1-dependencies-
 
       - run: composer install -n --prefer-dist
+      - run: composer require --dev phpunit/php-code-coverage 5.2.2
       - run: composer require --dev phpunit/phpunit 6.4.3
 
       - save_cache:
