--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,9 @@
             "php/Signing",
             "php/DataBase"
         ]
+    },
+    "require-dev": {
+        "phpunit/php-code-coverage": "1.2.0",
+        "phpunit/phpunit": "3.7.*"
     }
 }
