--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ php:
 before_install:
   - travis_retry composer self-update
 script:
-  - composer require --dev phpunit/php-code-coverage 5.2.2
-  - composer require --dev phpunit/phpunit 6.4.3
+  - composer install -n --prefer-dist
 after_success:
   - bash <(curl -s https://codecov.io/bash)
