--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: php
 php:
   - '7.1'
-before_install:
+before_script:
   - travis_retry composer self-update
+  - travis_retry composer install --no-interaction --prefer-dist --dev
 script:
-  - composer install -n --prefer-dist
+  - vendor/bin/phpunit --coverage-clover=coverage.xml
 after_success:
   - bash <(curl -s https://codecov.io/bash)
