--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ before_install:
   - travis_retry composer self-update
 script:
   - composer install -n --prefer-dist
-  - phpunit --coverage-clover=coverage.xml
+  - phpunit --coverage-clover coverage.xml
 after_success:
   - bash <(curl -s https://codecov.io/bash)
