disabled travis-ci email notifications

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ script:
   - composer install -n --prefer-dist
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+notifications:
+  email: false
