--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,6 @@
 {
-    "autoload": {
-        "classmap": [
-            "php/Signing",
-            "php/DataBase"
-        ]
-    },
+    "name": "atom/risk",
+    "description": "Visual front-end and early-warning system.",
     "require-dev": {
         "phpunit/php-code-coverage": "1.2.0",
         "phpunit/phpunit": "3.7.*"
