--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ php:
   - '7.1'
 before_install:
   - travis_retry composer self-update
+  -sudo apt-get install php-xdebug
 script:
   - composer install -n --prefer-dist
 after_success:
