--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ php:
   - '7.1'
 before_install:
   - travis_retry composer self-update
-  -sudo apt-get install php-xdebug
+  #try to install php_xdebug for codecover and clover files
+  - sudo apt-get install php-xdebug
 script:
   - composer install -n --prefer-dist
 after_success:
