--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
 before_install:
   - travis_retry composer self-update
   #try to install php_xdebug for codecover and clover files
-  - sudo apt-get install php-xdebug
+  - phpenv config-rm xdebug.ini
 script:
   - composer install -n --prefer-dist
 after_success:
