--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - travis_retry composer self-update
 script:
   - composer install -n --prefer-dist
-#  - phpunit --coverage-clover=coverage.xml
+  - phpunit
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 notifications:
