--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ php:
   - '7.2'
 before_install:
   - travis_retry composer self-update
+  - travis_retry composer install --no-interaction --prefer-source --dev
 script:
   - composer install -n --prefer-dist
+  - vendor/bin/phpunit --coverage-clover=coverage.xml
 #- phpunit
 after_success:
   - bash <(curl -s https://codecov.io/bash)
