editted composer json

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,10 @@
     "phpunit/dbunit":"*"
 
     },
+    "autoload": {
+        "psr-0": { 
+            "Example": "api/"
+        }
+    }
   "include-path":["/Atom/"]
 }
