--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,27 @@ before_install:
   - travis_retry composer install --no-interaction --prefer-source --dev
   - composer install -n --prefer-dist
   - travis_retry composer self-update
+install: 
+  - php vendor/vendors.php
+  - composer require symfony/framework-bundle:${SYMFONY_VERSION}
+env:
+  - SYMFONY_VERSION="2.0.*" DB=api_risk
+  - SYMFONY_VERSION="dev-master" DB=api_risk
+before_script: 
+  - phpenv config-add myconfig.ini
+  - sudo apt-get update
+  - sudo apt-get install apache2 libapache2-mod-fastcgi
+  # enable php-fpm
+  - sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
+  - sudo a2enmod rewrite actions fastcgi alias
+  - echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - sudo sed -i -e "s,www-data,travis,g" /etc/apache2/envvars
+  - sudo chown -R travis:travis /var/lib/apache2/fastcgi
+  - ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm
+  # configure apache virtual hosts
+  - sudo cp -f build/travis-ci-apache /etc/apache2/sites-available/000-default.conf
+  - sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/000-default.conf
+  - sudo service apache2 restart
 script:
   - travis_retry phpunit --coverage-clover=coverage.xml
 after_success:
