--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_script:
   - sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/000-default.conf
   - sudo service apache2 restart
 script:
-  - travis_retry phpunit --coverage-clover=clover.xml
+#  - travis_retry phpunit --coverage-clover=clover.xml
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 notifications:
