--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   #- php vendor/vendors.php
   - composer require symfony/framework-bundle:${SYMFONY_VERSION}
 env:
-  - SYMFONY_VERSION="2.0.*" DB=api_risk
+ # - SYMFONY_VERSION="2.0.*" DB=api_risk
   - SYMFONY_VERSION="dev-master" DB=api_risk
 before_script: 
   #- phpenv config-add myconfig.ini
@@ -24,8 +24,8 @@ before_script:
   #- ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm
   # configure apache virtual hosts
   #- sudo cp -f build/travis-ci-apache /etc/apache2/sites-available/000-default.conf
-  - sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/000-default.conf
-  - sudo service apache2 restart
+  #- sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/000-default.conf
+  #- sudo service apache2 restart
 script:
 #  - travis_retry phpunit --coverage-clover=clover.xml
 after_success:
