--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - travis_retry composer self-update
 install: 
   #- php vendor/vendors.php
-  - composer require symfony/framework-bundle:${SYMFONY_VERSION}
+  #- composer require symfony/framework-bundle:${SYMFONY_VERSION}
 env:
  # - SYMFONY_VERSION="2.0.*" DB=api_risk
   - SYMFONY_VERSION="dev-master" DB=api_risk
