--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,31 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit backupGlobals="false"
          backupStaticAttributes="false"
-         bootstrap="vendor/autoload.php"
+         bootstrap="api/autoload.php"
          colors="true"
          convertErrorsToExceptions="true"
          convertNoticesToExceptions="true"
          convertWarningsToExceptions="true"
          processIsolation="false"
          stopOnFailure="false"
-         syntaxCheck="false">
+         syntaxCheck="false"
+         stderr="true">
+
     <testsuites>
-        <testsuite name="tests">
-            <directory suffix="Test.php">./tests/phpunit/</directory>
+        <testsuite name="phptests">
+            <directory>tests/phpunit/api/</directory>
+            <directory>tests/phpunit/dashboard</directory>
+            <directory>tests/phpunit/php/</directory>
         </testsuite>
-	<testsuite name="gradeTest">
-		<file>./tests/phpunit/dashboard/gradeTest.php</file>
-	</testsuite>
-	<testsuite name="dashboardTest">
-		<file>./tests/phpunit/dashboard/TestingDashboardTest.php</file>
-	</testsuite>
     </testsuites>
      <logging>
-        <log type="coverage-clover" target="clover.xml"/>
-    </logging>
+         <log type="coverage-clover" target="_reports/type_clover/clover.xml"/>
+         <log type="coverage-html" target="_reports/type_html/coverage" charset="UTF-8" yui="true" highlight="true" lowUpperBound="35" highLowerBound="70" />
+     </logging>
     <filter>
-        <whitelist addUncoveredFilesFromWhitelist="false">
-            <directory suffix ="Test.php">./</directory>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">./api</directory>
+            <directory suffix=".php">./dashboard</directory>
+            <directory suffix=".php">./php</directory>
+
+            <exclude>
+                <directory>ExternalLibraries</directory>
+            </exclude>
         </whitelist>
     </filter>
 </phpunit>
+
