--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,14 @@
 language: php
-
-sudo: false
-
 php:
-- 7.2
-- master
-
-matrix:
-  allow_failures:
-  - php: master
-  fast_finish: true
-
-env:
-  matrix:
-  - DEPENDENCIES="high"
-  - DEPENDENCIES="low"
-  global:
-  - DEFAULT_COMPOSER_FLAGS="--no-interaction --no-ansi --no-progress --no-suggest"
-
+  - '7.2'
 before_install:
-- composer self-update
-- composer clear-cache
-
-install:
-- if [[ "$DEPENDENCIES" = 'high' ]]; then travis_retry composer update $DEFAULT_COMPOSER_FLAGS; fi
-- if [[ "$DEPENDENCIES" = 'low' ]]; then travis_retry composer update $DEFAULT_COMPOSER_FLAGS --prefer-lowest; fi
-
+  - travis_retry composer self-update
+  - travis_retry composer install --no-interaction --prefer-source --dev
 script:
-- if [[ "$DRIVER" = 'phpdbg' ]]; then phpdbg -qrr vendor/bin/phpunit --coverage-clover=coverage.xml; fi
-- if [[ "$DRIVER" = 'xdebug' ]]; then vendor/bin/phpunit --coverage-clover=coverage.xml; fi
-
+  - composer install -n --prefer-dist
+# - vendor/bin/phpunit --coverage-clover=coverage.xml
+# - phpunit
 after_success:
-- bash <(curl -s https://codecov.io/bash)
-
+  - bash <(curl -s https://codecov.io/bash)
 notifications:
   email: false
