added codecov branch for testing

--- a/.gitignore
+++ b/.gitignore
@@ -14,18 +14,18 @@ js/*._*
 php/*._*
 vendor/
 local/
-
 dashboard/*._*
 dashboard/js/*._*
 dashboard/css/*._*
 dashboard/img/*._*
 dashboard/fonts/*._*
 dashboard/assets/*._*
-
-api/*_*
+api/
 css/*_*
 extra/*_*
 img/*_*
 java/*_*
 js/*_*
 php/*_*
+
+
